--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
         tools:context=".MainActivity">
     <com.mapbox.mapboxsdk.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            mapbox:mapbox_cameraZoom="15"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
